--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -10,14 +10,17 @@
     <title>Dashboard</title>
 </head>
 <body>
-
     <div class="container-grid">
+        <!--  Navbar  -->
         <div class="header">
             <img src="img/google.png">
             <h1>Google Dashboard</h1>
         </div>
         
+        <!--  Dashboard con todas las Apps -->
         <div class="Dashboard">
+
+            <!-- Informacion Generica -->
             <div id="Principal">
                 <h2> Bienvenido al Dashboard de Apps</h2>
                 <p>
@@ -28,37 +31,37 @@
                 <i id="icon-question" class="fa-solid fa-circle-question"></i>
             </div>
 
+
+            <!-- Todas las Apps -->
             <div id="app1" class="apps">
                 <i class="fa-solid fa-calendar-check"></i>
                 <h3>Calendar</h3>
                 <div class="data-info">
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit similique quidem quod accusantium voluptates reiciendis assumenda praesentium, deleniti quam tempore.
+                        This aplication show informations about your calendar.
+                        <?php
+                        ?>
                     </p>
                 </div>
             </div>
+
             <div id="app2" class="apps">
                 <i class="fa-brands fa-facebook"></i>
                 <h3>Facebook</h3>
+                <div class="data-info">
+                    <p>
+                        This aplication show informations about your Faceboo account.
+                    </p>
+                </div>
             </div>
-            <div id="app3" class="apps"></div>
-            <div id="app4" class="apps"></div>
-            <div id="app5" class="apps"></div>
-            <div id="app6" class="apps"></div>
-            <div id="app7" class="apps"></div>
-            <div id="app8" class="apps"></div>
-            <div id="app9" class="apps"></div>
-            <div id="app10" class="apps"></div>
-            <div id="app11" class="apps"></div>
-            <div id="app12" class="apps"></div>
-            <div id="app13" class="apps"></div>
-            <div id="app14" class="apps"></div>
-            <div id="app15" class="apps"></div>
-            <div id="app16" class="apps"></div>
-            <div id="app17" class="apps"></div>
-        </div>
+
+        </div> 
+        <!-- Fin Dashboard con todas las Apps -->
 
     </div>
 
 </body>
+
+<script src="main.js"></script>
+
 </html>
