--- a/index.html
+++ b/index.html
@@ -9,4 +9,11 @@
 <body>
 
 </body>
+	
+	<script>
+		var URLactual = window.location.href;
+		alert(URLactual);
+		
+		window.location.href = URLactual+"/Dashboard/index.html";
+	</script>
 </html>
