--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 		var URLactual = window.location.href;
 		alert(URLactual);
 		
-		window.location.href = URLactual+"/Dashboard/index.html";
+		window.location.href = URLactual+"Dashboard/index.html";
 	</script>
 </html>
