--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="../Dashboard/index.css">
     <link rel="icon" href="https://i.pinimg.com/originals/0b/92/c1/0b92c1ba5ae239c314ba2ec1dab936ec.png">
     <script src="https://kit.fontawesome.com/87edc8fc31.js" crossorigin="anonymous"></script>
     <title>Dashboard</title>
