--- a/Full Dashboard/plantillas/monitor_2.html
+++ b/Full Dashboard/plantillas/monitor_2.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="../styles/monitor_2.css">
+<link rel="stylesheet" type="text/css" href="../../Full Dashboard/styles/monitor_2.css">
 
 <div class="Grid-Monitor-2">
     
