--- a/Dashboard/index.html
+++ b/Dashboard/index.html
@@ -13,7 +13,7 @@
     <div class="container-grid">
         <!--  Navbar  -->
         <div class="header">
-            <img src="img/google.png">
+            <img src="../Dashboard/img/google.png">
             <h1>Google Dashboard</h1>
         </div>
         
@@ -57,6 +57,6 @@
 
 </body>
 
-<script src="./main.js"></script>
+<script src="../Dashboard/main.js"></script>
 
 </html>
