--- a/Full Dashboard/index.html
+++ b/Full Dashboard/index.html
@@ -75,15 +75,5 @@
     </div >
 </body>
 
-<script type="text/javascript" src="scripts/main.js"></script>
+<script type="text/javascript" src="../Full Dashboard/scripts/main.js"></script>
 </html>
-
-
-<!-- 
-     <div class="shower">
-            <iframe id = "shower">
-            
-            </iframe>   
-        </div>
-
- -->
